Changed: Readded Back to thread list link at bottom of Mobile messages. Changed: Increased font-size on Mobile version and reduced margin around content. Fixed: Message header layout in Mobile Version when user has a long username.

--- a/forum/styles/yellow/mobile.css
+++ b/forum/styles/yellow/mobile.css
@@ -27,7 +27,7 @@ input,
     font-weight: bold;
     line-height: 150%;
     margin: 3px;
-    padding: 2px 4px 1px;
+    padding: 3px 4px 1px;
     text-align: center;
     text-decoration: none;
 }
@@ -59,6 +59,7 @@ a {
     font-family: monospace;
     font-size: 120%;
     margin: 0 10px 0 20px;
+    white-space: pre-wrap;
     overflow: scroll;
     padding: 3px;
 }
@@ -94,9 +95,8 @@ body {
 
 #header > #header_top {
     border-bottom: 1px solid #000000;
-    border-top: 1px solid #FFFFFF;
     color: #FFFFFF;
-    padding: 4px 8px;
+    padding: 2px 4px;
     position: relative;
 }
 
@@ -124,10 +124,9 @@ body {
     color: #FFFFFF;
     display: block;
     float: left;
-    font-size: 120%;
+    font-size: 110%;
     font-weight: bold;
-    line-height: 190%;
-    margin: 2px 0 0 4px;
+    margin: 8px 0 0 4px;
     padding: 0 8px;
 }
 
@@ -169,19 +168,20 @@ body {
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
     display: table-cell;
-    font-size: 150%;
+    font-size: 120%;
     font-weight: bold;
 }
 
 #nav li a {
     color: #FFFFFF;
     display: block;
-    line-height: 30px;
+    line-height: 25px;
     text-align: center;
 }
 
 #content {
-    margin: 10px;
+    font-size: 110%;
+    margin: 10px 5px;
     padding-bottom: 5px;
 }
 
@@ -204,8 +204,8 @@ body {
 
 #thread_view li.right_col,
 #thread_mark_read li.right_col {
-    text-align: center;
-    width: 3%;
+    text-align: right;
+    width: 2%;
 }
 
 .message_box {
@@ -270,8 +270,8 @@ body {
 .folder_pagination {
     background-color: #FFC846;
     border: 1px solid #FFC846;
-    font-size: 110%;
-    padding: 0 2px;
+    font-size: 100%;
+    padding: 3px 3px 0;
 }
 
 .folder_info span {
@@ -321,7 +321,7 @@ body {
 .message_header {
     background-color: #FFC846;
     border: 1px solid #FFC846;
-    font-size: 110%;
+    font-size: 100%;
     padding: 2px 4px;
 }
 
@@ -334,27 +334,33 @@ body {
 .message_to,
 .message_subject {
     line-height: 150%;
-    text-align: right;
 }
 
-.message_from > span,
-.message_to > span,
-.message_subject > span {
-    float: left;
+.message_from .message_time,
+.message_to .message_count {
+    display: block;
+    float: right;
+    white-space: nowrap;
 }
 
 .message_to span.message_read {
-    font-size: 85%;
+    font-size: 80%;
     padding-left: 10px;
+    white-space: nowrap;
 }
 
 .message_to span.message_unread {
-    background: url('images/unread.png') transparent no-repeat scroll 0 0;
-    padding-left: 20px;
+    background: url('images/post_unread.png') transparent no-repeat scroll 0 0;
+    margin-left: 5px;
+    padding-left: 16px;
+}
+
+.message_subject span.no_subject {
+    font-style: italic;
 }
 
 .message_links {
-    padding: 2px 4px;
+    padding: 4px 4px 2px;
     text-align: right;
 }
 
@@ -409,6 +415,7 @@ body {
 
 .message_pagination {
     font-size: 120%;
+    margin-top: 20px;
     text-align: center;
 }
 
@@ -452,6 +459,17 @@ a.reply_all {
 
 a.pm_send_new {
     background: url('images/post.png') transparent no-repeat scroll 0 0;
+    display: inline-block;
+    font-size: 120%;
+    font-weight: bold;
+    line-height: 160%;
+    margin: 10px 0 0;
+    padding-left: 20px;
+    text-decoration: underline;
+}
+
+a.thread_list_link {
+    background: url('images/thread_back.png') transparent no-repeat scroll 0 0;
     display: inline-block;
     font-size: 120%;
     font-weight: bold;
